fix: contract params align left

--- a/src/pages/Proposal/containers/CreateProposal/index.less
+++ b/src/pages/Proposal/containers/CreateProposal/index.less
@@ -14,6 +14,10 @@
       overflow: auto;
       flex-grow: 1;
       margin-bottom: 0;
+
+      &.contract-params {
+        text-align: left;
+      }
     }
   }
 }
